src/styles/about/notifications.module.scss
$max-z: 20;

.notificationsContainer {
    position: relative;
    width: 100%;
}

.notificationsList {
    position: relative;
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    list-style: none;

    /* Animate between max height and vh */
    max-height: 8rem;
    min-height: 6rem;

    overflow: hidden;
    transition: max-height 0.5s ease;

    &.expanded {
        max-height: 100vh;
        margin-bottom: var(--space-sm);
    }

    &.collapsed {
        .notificationCard {
            margin-bottom: -4rem;
            transform: translateY(0);
            opacity: 1;

            // Descending z-index for the first $max-z items
            @for $i from 1 through $max-z {
                &:nth-child(#{$i}) {
                    z-index: #{($max-z - $i + 1)};
                }
            }

            &:nth-child(n+#{$max-z + 1}) {
                z-index: 1;
            }
        }

        @for $i from 2 through $max-z {
            .notificationCard:nth-child(#{$i}) {
                $scale: 1 - (($i - 1) * 0.05);

                @if $i ==2 {
                    transform: translateY(0rem) scale($scale);
                    opacity: 1;
                }

                @else if $i ==3 {
                    transform: translateY(0rem) scale($scale);
                    opacity: 0;
                }

                @else {
                    transform: translateY(0rem) scale($scale);
                    opacity: 0;
                }
            }
        }

    }

    &.expanded {
        .notificationCard {
            margin-bottom: var(--space-sm);
            transform: translateY(0);
            opacity: 1;

            // In expanded state, enforce stacking fron to back
            @for $i from 1 through $max-z {
                &:nth-child(#{$i}) {
                    z-index: #{($max-z - $i + 1)};
                }
            }

            &:nth-child(n+#{$max-z + 1}) {
                z-index: 2;
            }
        }
    }
}

.expandButton {
    width: 120px;
    padding: var(--space-sm);
    font-size: var(--font-sm);
    background-color: rgba(var(--brand-grey-rgb), 0.12);
    border: none;
    border-radius: var(--radius-lg);
    cursor: pointer;
    margin-bottom: var(--space-sm);
    transition: background-color 0.2s ease;

    display: block;
    margin-left: auto;

    color: var(--color-foreground);
}

.expandButton:hover {
    background-color: rgba(var(--brand-grey-rgb), 0.2);
    color: var(--brand-blue);
}

.notificationCard {
    position: relative;
    background-color: rgba(var(--brand-grey-rgb), 0.12);
    border-radius: var(--radius-lg);
    padding: var(--space-md);
    display: flex;
    align-items: center;
    max-width: 100%;
    box-shadow: var(--shadow-xs);
    backdrop-filter: blur(22px);
    -webkit-backdrop-filter: blur(22px);
    transition:
        margin-bottom 0.4s cubic-bezier(0.25, 0.1, 0.25, 1),
        transform 0.4s cubic-bezier(0.25, 0.1, 0.25, 1),
        opacity 0.4s cubic-bezier(0.25, 0.1, 0.25, 1);
    
    /* Safari transition ptimisation */
    will-change: transform, opacity;
    transform: translate3d(0, 0, 0);
}

.notificationCard::before {
    /* content: ""; */
    position: absolute;
    inset: 0;
    backdrop-filter: blur(22px);
    -webkit-backdrop-filter: blur(22px);
    border-radius: inherit;
    z-index: -1;
}

.cover {
    width: 48px;
    height: 48px;
    object-fit: cover;
    border-radius: 0.5rem;
    margin-right: 1rem;
    flex-shrink: 0;
}

.details {
    display: flex;
    flex-direction: column;
}

.activityLabel {
    position: absolute;
    top: var(--space-md);
    right: var(--space-md);
    opacity: 0.5;
    font-size: var(--font-xs);
    font-variation-settings: var(--var-sm);
}

.details h3 {
    margin: 0;
    text-align: left;
    font-size: var(--font-sm);
    font-variation-settings: var(--var-sm);
    font-variation-settings: "wght" 520;
}

.details p {
    margin: var(--space-xs) 0 0;
    text-align: left;
    font-size: var(--font-sm);
}

@media (max-width: 768px) {

    .notificationsList {
        margin-bottom: calc(var(--space-xs) + var(--space-xs));

        &.expanded {
            margin-bottom: var(--space-xs);
        }
    }

}

